Fix spacing

--- a/www/src/css/main.css
+++ b/www/src/css/main.css
@@ -580,7 +580,7 @@ svg {
     font-size: 1.25rem;
 }
 
-.config h2 {
+.config-right h2 {
     margin-top: 1rem;
     font-weight: 800;
     font-size: 1rem;
